pages | no blog

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,6 +19,7 @@ body {
 @import "header.scss";
 @import "about.scss";
 @import "sliders.scss";
+@import "page.scss";
 @import "team.scss";
 @import "feedback.scss";
 @import "spinner.scss";
