--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -65,6 +65,8 @@
   &__pic {
     width: 30vw;
     height: 30vw;
+    max-width: 490px;
+    max-height: 490px;
     &-1 {
       background: url(../img/slide1_3.png) center/cover no-repeat;
     }
@@ -84,7 +86,10 @@
       background: url(../img/slide1_7.png) center/cover no-repeat;
     }
     &-7 {
-      background: url(../img/slide1_4.png) center/cover no-repeat;
+      background: url(../img/slide1_8.png) center/cover no-repeat;
+    }
+    &-8 {
+      background: url(../img/slide1_9.png) center/cover no-repeat;
     }
   }
 }
