--- a/src/styles/sliders.scss
+++ b/src/styles/sliders.scss
@@ -117,6 +117,7 @@
   padding-top: 30px;
   background: #e9cc33;
   text-align: center;
+  transition: all 0.3s ease-in-out;
   @media (max-width: 768px) {
     margin-top: 20px;
     padding-bottom: 20px !important;
@@ -126,6 +127,9 @@
     display: flex !important;
     justify-content: flex-start;
     align-items: center;
+  }
+  &:hover{cursor: pointer;
+    transform: translateY(-10px);
   }
 }
 
