pages | no blog

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -91,5 +91,8 @@
     &-8 {
       background: url(../img/slide1_9.png) center/cover no-repeat;
     }
+    &-9 {
+      background: url(../img/slide1_10.png) center/cover no-repeat;
+    }
   }
 }
