--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -65,8 +65,8 @@
   &__pic {
     width: 30vw;
     height: 30vw;
-    max-width: 490px;
-    max-height: 490px;
+    max-width: 390px;
+    max-height: 390px;
     &-1 {
       background: url(../img/slide1_3.png) center/cover no-repeat;
     }
@@ -93,6 +93,12 @@
     }
     &-9 {
       background: url(../img/slide1_10.png) center/cover no-repeat;
+    }
+    &-10 {
+      background: url(../img/slide1_6.png) center/cover no-repeat;
+    }
+    &-11 {
+      background: url(../img/slide2_1.png) center/cover no-repeat;
     }
   }
 }
