--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -55,7 +55,7 @@
     transform: translateY(-10px);
   }
   @media (max-width: 900px) {
-    margin: 40px 0 0 0;
+    margin: 20px 0;
   }
   @media (max-width: 400px) {
     width: 250px;
