--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -8,6 +8,9 @@
   position: relative;
   padding-top: 50px;
   width: 60%;
+  @media (max-width: 1000px) {
+    width: 100%;
+  }
   &__title {
     font-family: Roboto Condensed;
     font-style: normal;
@@ -16,6 +19,13 @@
     line-height: 56px;
     color: #080705;
     margin-bottom: 20px;
+    @media (max-width: 1000px) {
+      font-size: 30px;
+    }
+    @media (max-width: 680px) {
+      font-size: 20px;
+      line-height: 22px;
+    }
   }
   &__lead {
     font-family: Montserrat;
@@ -56,11 +66,18 @@
     font-size: 28px;
     line-height: 56px;
     color: #818180;
+    @media (max-width: 680px) {
+      line-height: 28px;
+      margin-bottom: 10px;
+    }
   }
   &__infograph {
       width: 50vw;
       height: 25vw;
       background: url('../img/ppk.png') center/cover no-repeat;
+      @media (max-width: 680px) {
+        display: none;
+      }
   }
   &__pic {
     width: 30vw;
@@ -99,6 +116,12 @@
     }
     &-11 {
       background: url(../img/slide2_1.png) center/cover no-repeat;
+    }
+    &-12 {
+      background: url(../img/slide2_2.png) center/cover no-repeat;
+    }
+    @media (max-width: 1000px) {
+      display: none;
     }
   }
 }
