new sliders | no blog

--- a/src/styles/feedback.scss
+++ b/src/styles/feedback.scss
@@ -26,8 +26,7 @@
 }
 
 .feedback__yellow {
-  background: #e9cc33;
-  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
+  background: #F4CD0D;
 }
 
 .feedback__title {
