--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -126,8 +126,7 @@
   margin: 50px auto;
   max-width: 800px;
   padding: 40px 0;
-  background: #e9cc33;
-  box-shadow: 14px 14px 4px rgba(0, 0, 0, 0.25);
+  background: #F4CD0D;
   display: flex;
   justify-content: space-between;
   align-items: top;
@@ -253,7 +252,7 @@
 .goal__number {
   width: 90px;
   height: 90px;
-  background: #e9cc33;
+  background: #F4CD0D;
   border-radius: 50%;
   text-align: center;
   font-family: Montserrat;
