--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -45,8 +45,7 @@
     height: 100%;
     right: 0;
     top: 0;
-    background: #e9cc33;
-    box-shadow: 14px 14px 4px rgba(0, 0, 0, 0.25);
+    background: #F4CD0D;
     @media (max-width: 768px) {
       z-index: -1;
       left: 0;
@@ -79,7 +78,6 @@
   height: 50.79px;
   right: -20px;
   background: #2d2927;
-  box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.25);
   border-radius: 0px;
   display: flex;
   align-items: center;
