--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -47,8 +47,7 @@
   width: 305px;
   height: 67px;
   margin-left: 50px;
-  background: #e9cc33;
-  box-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25);
+  background: #F4CD0D;
   text-align: center;
   transition: 0.3s;
   &:hover {
@@ -75,8 +74,7 @@
   width: 170px;
   padding-top: 23px;
   height: 67px;
-  background: #e9cc33;
-  box-shadow: 15px 15px 4px rgba(0, 0, 0, 0.25);
+  background: #F4CD0D;
   text-align: center;
   transition: 0.3s;
   &:hover {
