--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -31,7 +31,7 @@
   }
   &__input {
     height: 40px;
-    border: 1px solid #e9cc33;
+    border: 1px solid #F4CD0D;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
@@ -51,8 +51,7 @@
     margin: 10px auto;
     width: 100%;
     height: 40px;
-    background: #e9cc33;
-    box-shadow: 10px 10px 2px rgba(0, 0, 0, 0.25);
+    background: #F4CD0D;
     transition: 0.3s ease-out;
     font-family: Montserrat;
     font-style: normal;
