--- a/src/styles/spinner.scss
+++ b/src/styles/spinner.scss
@@ -17,7 +17,7 @@
   left: 28px;
   border-radius: 50%;
   border: 16px solid #080705;
-  border-color: #e9cc33 transparent #e9cc33 transparent;
+  border-color: #F4CD0D transparent #F4CD0D transparent;
   animation: ldio-rfwki38ms6 2s linear infinite;
 }
 
@@ -50,14 +50,12 @@
   height: 16px;
   top: -16px;
   left: 48px;
-  background: #e9cc33;
+  background: #F4CD0D;
   border-radius: 50%;
-  box-shadow: 0 128px 0 0 #e9cc33;
 }
 .ldio-rfwki38ms6 > div:nth-child(3) div:after {
   left: -16px;
   top: 48px;
-  box-shadow: 128px 0 0 0 #e9cc33;
 }
 
 .ldio-rfwki38ms6 > div:nth-child(4) {
@@ -80,12 +78,10 @@
   left: 30px;
   background: #080705;
   border-radius: 50%;
-  box-shadow: 0 92px 0 0 #080705;
 }
 .ldio-rfwki38ms6 > div:nth-child(4) div:after {
   left: -16px;
   top: 30px;
-  box-shadow: 92px 0 0 0 #080705;
 }
 .loadingio-spinner-double-ring-238aqtlwgn3 {
   margin: 0 auto;
