--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   height: 690px;
+  overflow: hidden;
 }
 
 .header__wrapper .slick-list {
@@ -12,6 +13,21 @@
 .header__wrapper .slick-dots {
   position: absolute;
   bottom: 30px;
+}
+
+.slick-dots li button:before {
+  font-size: 6px;
+  line-height: 20px;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  content: "";
+  text-align: center;
+  opacity: 0.25;
+  background-color: #000;
+  margin: 0 10px;
+  border-radius: 50%;
 }
 
 .header__first-slide {
@@ -55,16 +71,28 @@
 
 .header__slide-content {
   width: 455px;
-  height: 200px;
   margin-top: 20px;
+  padding: 10px;
   font-family: Montserrat;
   font-style: normal;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 170%;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 24px;
   color: #ffffff;
+  border-radius: 15px;
+  background-color: rgba(126, 126, 126, 0.8);
+  @media (max-width: 985px) {
+    font-size: 14px;
+  }
   @media (max-width: 530px) {
-    width: 270px;
+    font-size: 12px;
+    width: 360px;
+    line-height: 18px;
+  }
+  @media (max-width: 430px) {
+    font-size: 12px;
+    width: 255px;
+    line-height: 18px;
   }
 }
 
@@ -74,7 +102,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: top;
   z-index: 1;
 }
 
@@ -103,7 +131,7 @@
 .menu__items {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   height: 40px;
   @media (max-width: 1024px) {
     flex-direction: column;
@@ -233,7 +261,7 @@ a:focus:after {
   right: -16px;
   top: -65px;
   z-index: -1;
-  background: #F4CD0D;
+  background: #f4cd0d;
   transition: 0.3s;
   @media (max-width: 768px) {
     display: none;
@@ -252,11 +280,15 @@ a:focus:after {
     width: 100%;
     bottom: 15px;
   }
+  @media (max-width: 430px) {
+    display: none;
+  }
 }
 
 .links__item {
   width: 30px;
   height: 22px;
+  transform: scale(1.1);
   transition: 0.3s;
   &:hover {
     transform: translateY(-5px);
@@ -286,16 +318,16 @@ a:focus:after {
 .header__feedback {
   position: absolute;
   z-index: 1;
-  left: -70px;
-  bottom: 130px;
+  right: -70px;
+  bottom: 36px;
   width: 376px;
   height: 67px;
-  background: #F4CD0D;
+  background: #f4cd0d;
   text-align: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  padding-right: 17px;
+  padding-left: 17px;
   transition: 0.3s ease-out;
   font-family: Montserrat;
   font-style: normal;
@@ -304,13 +336,54 @@ a:focus:after {
   line-height: 22px;
   color: #080705;
   &:hover {
-    left: -20px;
+    right: -10px;
     cursor: pointer;
   }
-  @media (max-width: 530px) {
+  @media (max-width: 654px) {
     width: 290px;
     height: 50px;
-    bottom: 63px;
+    bottom: 90px;
     font-size: 16px;
+  }
+  @media (max-width: 430px) {
+    bottom: 20px;
+    height: 67px;
+  }
+}
+
+.drop__menu {
+  width: 100%;
+  padding: 20px;
+  background-color: #ffffff;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  transition: all 0.3s ease-in-out;
+  @media (max-width: 1025px) {
+    margin-top: -10px;
+  }
+}
+
+.drop__item {
+  width: 100%;
+  padding: 10px 5px 10px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 17px;
+  color: #080705;
+  border-bottom: 1px solid #080705;;;
+  transition: all 0.3s ease-in-out;
+  @media (max-width: 635px) {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  &:hover {
+    color: rgb(161, 161, 161);
+    cursor: pointer;
   }
 }
