--- a/src/styles/feedback.scss
+++ b/src/styles/feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-    position: relative;
+  position: relative;
 }
 
 .feedback__wrapper {
@@ -26,7 +26,7 @@
 }
 
 .feedback__yellow {
-  background: #F4CD0D;
+  background: #f4cd0d;
 }
 
 .feedback__title {
@@ -48,9 +48,9 @@
   margin: 20px 0;
   font-family: Montserrat;
   font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 20px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
   color: #080705;
 }
 
@@ -70,12 +70,12 @@
 }
 
 .feedback .menu__button {
-    left: -70px;
-    bottom: 50px;
-    @media (max-width: 1480px) {
-      bottom: 40px;
-    }
-    @media (max-width: 400px) {
-      left: -120px;
-    }
+  left: -70px;
+  bottom: 50px;
+  @media (max-width: 1480px) {
+    bottom: 40px;
   }
+  @media (max-width: 400px) {
+    left: -120px;
+  }
+}
