--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -63,4 +63,10 @@
         transform: translateY(-5px);
     }
   }
+
+  &__message {
+    height: 120px;
+    align-items: start;
+    padding-top: 10px;
+  }
 }
