--- a/src/styles/sliders.scss
+++ b/src/styles/sliders.scss
@@ -1,38 +1,44 @@
 .slider {
+  margin: 0 auto;
   width: 100%;
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-gap: 50px;
+  @media (max-width: 850px) {
+    grid-template-columns: 100%;
+  }
+  & .swiper-slide {
+    height: 60px !important;
+    @media (max-width: 850px) {
+      height: 150px !important;
+    }
+  }
 }
 
 .slider__one {
-  width: 30%;
+  width: 100%;
   text-align: center;
   overflow: hidden;
-  @media (max-width: 768px) {
-    padding: 0;
+  @media (max-width: 850px) {
+    display: flex;
+    justify-content: space-between;
   }
 }
 
 .slider__two {
-  width: 30%;
+  width: 100%;
   text-align: center;
   overflow: hidden;
-  @media (max-width: 768px) {
-    padding: 0;
-  }
 }
 
 .slider__three {
-  width: 30%;
+  width: 100%;
   text-align: center;
   overflow: hidden;
-  @media (max-width: 768px) {
-    padding: 0;
-  }
 }
 
 .slider_main__title {
-  margin: 50px auto 50px;
+  margin: 50px 0;
   font-family: Roboto Condensed;
   font-style: normal;
   font-weight: bold;
@@ -41,62 +47,41 @@
   color: #e6e6e6;
   text-transform: uppercase;
   @media (max-width: 768px) {
-    display: none;
+    font-size: 50px;
   }
-  @media (max-width: 450px) {
+  @media (max-width: 550px) {
     font-size: 32px;
-    width: 240px;
+    margin: 20px 0;
     padding-bottom: 0;
   }
 }
 
-.slider_main__title-two {
-  width: 270px;
-}
-
-.slider_main__title-three {
-  width: 100px;
-}
-
-.slider__one {
-  margin-top: 35px;
-  overflow: visible;
-  margin: 0 7px 0;
-}
-
-.slider__one .slider__card,
+.slider__card,
 .slider__two-card,
 .slider__three-card {
-  width: 420px !important;
-  height: 120px;
+  height: 60px;
   background: #f4cd0d;
   transition: all 0.3s ease-in-out;
-  margin-bottom: 20px;
-  display: flex !important;
+  display: flex;
   align-items: center;
+  text-align: left;
   padding-left: 20px;
-  @media (max-width: 768px) {
-    margin-top: 20px;
-    padding-bottom: 20px !important;
-    width: 100% !important;
-    height: 120px;
-    padding: 0;
-
-    align-items: center;
+  @media (max-width: 1000px) {
+    padding-left: 5px;
   }
+  @media (max-width: 850px) {
+    text-align: center;
+    justify-content: center;
+    margin: 0 5px;
+    height: 150px;
+  }
+  
   &:hover {
     cursor: pointer;
     transform: translateX(10px);
     @media (max-width: 768px) {
       transform: none;
     }
-  }
-}
-
-.slider__three-card {
-  @media (max-width: 768px) {
-    height: 220px;
-    margin-top: 100px;
   }
 }
 
@@ -108,15 +93,24 @@
   line-height: 35px;
   color: #080705;
   margin-left: 10px;
+  @media (max-width: 1500px) {
+    font-size: 15px;
+    line-height: 20px;
+  }
+  @media (max-width: 850px) {
+    margin: 0;
+  }
 }
 
 .slider__img {
-  width: 80px;
-  height: 80px;
-  @media (max-width: 768px) {
-    margin: 20px 20px 0 10px;
-    height: 80px;
-    width: 80px;
+  width: 40px;
+  height: 40px;
+  @media (max-width: 1350px) {
+    height: 30px;
+    width: 30px;
+  }
+  @media (max-width: 1000px) {
+    display: none;
   }
 }
 
@@ -161,16 +155,6 @@
 }
 .slider__img-14 {
   background: url(../img/slide2_3.png) center/cover;
-}
-
-.slider__body {
-  margin-top: 35px;
-  display: flex;
-  justify-content: center;
-  @media (max-width: 768px) {
-    flex-direction: column;
-    margin-top: 0;
-  }
 }
 
 .slider__two .slider__two-card:not(:last-child) {
