--- a/src/styles/spinner.scss
+++ b/src/styles/spinner.scss
@@ -16,8 +16,8 @@
   top: 28px;
   left: 28px;
   border-radius: 50%;
-  border: 16px solid #080705;
-  border-color: #F4CD0D transparent #F4CD0D transparent;
+  border: 16px solid #201335;
+  border-color: #FCE762 transparent #FCE762 transparent;
   animation: ldio-rfwki38ms6 2s linear infinite;
 }
 
@@ -30,7 +30,7 @@
   animation: ldio-rfwki38ms6 2s linear infinite reverse;
 }
 .ldio-rfwki38ms6 > div:nth-child(2) {
-  border-color: transparent #080705 transparent #080705;
+  border-color: transparent #201335 transparent #201335;
 }
 .ldio-rfwki38ms6 > div:nth-child(3) {
   border-color: transparent;
@@ -50,7 +50,7 @@
   height: 16px;
   top: -16px;
   left: 48px;
-  background: #F4CD0D;
+  background: #FCE762;
   border-radius: 50%;
 }
 .ldio-rfwki38ms6 > div:nth-child(3) div:after {
@@ -76,7 +76,7 @@
   height: 16px;
   top: -16px;
   left: 30px;
-  background: #080705;
+  background: #201335;
   border-radius: 50%;
 }
 .ldio-rfwki38ms6 > div:nth-child(4) div:after {
