--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -25,7 +25,7 @@
     font-weight: bold;
     font-size: 48px;
     line-height: 56px;
-    color: #080705;
+    color: #201335;
   }
   &__content {
     margin-top: 20px;
@@ -34,18 +34,18 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    color: #080705;
+    color: #201335;
     @media (max-width: 768px) {
       margin-bottom: 20px;
     }
   }
   &__square {
     position: absolute;
-    width: 40%;
+    width: 35%;
     height: 100%;
     right: 0;
     top: 0;
-    background: #F4CD0D;
+    background: #FCE762;
     @media (max-width: 768px) {
       z-index: -1;
       left: 0;
