--- a/src/styles/feedback.scss
+++ b/src/styles/feedback.scss
@@ -6,11 +6,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 32px;
-  margin-bottom: 90px;
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    margin-bottom: 150px;
+    margin: 0;
   }
 }
 
@@ -26,7 +25,7 @@
 }
 
 .feedback__yellow {
-  background: #f4cd0d;
+  background: #FCE762;
 }
 
 .feedback__title {
@@ -35,7 +34,7 @@
   font-weight: bold;
   font-size: 48px;
   line-height: 56px;
-  color: #080705;
+  color: #201335;
   @media (max-width: 1320px) {
     font-size: 30px;
   }
@@ -51,7 +50,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  color: #080705;
+  color: #201335;
 }
 
 .feedback__author {
@@ -60,7 +59,7 @@
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
-  color: #080705;
+  color: #201335;
   @media (max-width: 1320px) {
     font-size: 26px;
   }
