--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -16,7 +16,7 @@
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
-  color: #080705;
+  color: #201335;
   @media (max-width: 900px) {
     text-align: center;
     font-size: 28px;
@@ -46,7 +46,7 @@
 .footer__button {
   width: 305px;
   height: 67px;
-  background: #F4CD0D;
+  background: #FCE762;
   text-align: center;
   transition: 0.3s;
   &:hover {
@@ -66,14 +66,14 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
-  color: #080705;
+  color: #201335;
 }
 
 .footer__menu-button {
   width: 170px;
   padding-top: 23px;
   height: 67px;
-  background: #F4CD0D;
+  background: #FCE762;
   text-align: center;
   transition: 0.3s;
   &:hover {
