--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -91,7 +91,7 @@
   }
   @media (max-width: 430px) {
     font-size: 12px;
-    width: 255px;
+    width: 260px;
     line-height: 18px;
   }
 }
@@ -102,12 +102,13 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: top;
-  z-index: 1;
+  align-items: center;
+  z-index: 5;
 }
 
 .header__menu {
-  width: 450px;
+  position: relative;
+  width: 480px;
   transition: all 0.3s ease-out;
   @media (max-width: 1200px) {
     width: 350px;
@@ -131,19 +132,20 @@
 .menu__items {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   height: 40px;
   @media (max-width: 1024px) {
     flex-direction: column;
-    margin-top: 70px;
+    margin-top: 80px;
   }
 }
 
 .menu__item {
   font-family: Montserrat;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 14px;
+  letter-spacing: 1px;
   line-height: 17px;
   color: #ffffff;
   position: relative;
@@ -198,7 +200,7 @@
 
 .header__logo,
 .footer__logo {
-  width: 171px;
+  width: 172px;
   height: 30px;
   background: url(../img/logo.png) center/cover;
 }
@@ -217,13 +219,13 @@
   line-height: 22px;
   /* identical to box height */
 
-  color: #080705;
+  color: #201335;
 }
 
 .header__email {
   margin-top: 3px;
   text-align: right;
-  color: #080705;
+  color: #201335;
 }
 
 .header__email a {
@@ -232,7 +234,7 @@
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
-  color: #080705 !important;
+  color: #201335 !important;
   position: relative;
   text-decoration: none;
 }
@@ -244,7 +246,7 @@
   bottom: -2px; /*изменить на right:0;, чтобы изменить направление подчёркивания */
   width: 0; /*задаём длинну линии до наведения курсора*/
   height: 1px; /*задаём ширину линии*/
-  background-color: #080705; /*задаём цвет линии*/
+  background-color: #201335; /*задаём цвет линии*/
   content: "";
   transition: width 0.3s ease-out; /*задаём время анимации*/
 }
@@ -261,7 +263,7 @@ a:focus:after {
   right: -16px;
   top: -65px;
   z-index: -1;
-  background: #f4cd0d;
+  background: #FCE762;
   transition: 0.3s;
   @media (max-width: 768px) {
     display: none;
@@ -322,7 +324,7 @@ a:focus:after {
   bottom: 36px;
   width: 376px;
   height: 67px;
-  background: #f4cd0d;
+  background: #FCE762;
   text-align: center;
   display: flex;
   justify-content: flex-start;
@@ -334,7 +336,7 @@ a:focus:after {
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
-  color: #080705;
+  color: #201335;
   &:hover {
     right: -10px;
     cursor: pointer;
@@ -352,6 +354,7 @@ a:focus:after {
 }
 
 .drop__menu {
+  position: absolute;
   width: 100%;
   padding: 20px;
   background-color: #ffffff;
@@ -371,8 +374,8 @@ a:focus:after {
   font-size: 16px;
   font-weight: 400;
   line-height: 17px;
-  color: #080705;
-  border-bottom: 1px solid #080705;;;
+  color: #201335;
+  border-bottom: 1px solid #201335;;;
   transition: all 0.3s ease-in-out;
   @media (max-width: 635px) {
     font-size: 12px;
