--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,7 +1,7 @@
 .modal {
   height: 100%;
   width: 100%;
-  background-color: rgba($color: #000000, $alpha: 0.4);
+  background-color: rgba($color: #201335, $alpha: 0.4);
   position: fixed;
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@
   }
   &__input {
     height: 40px;
-    border: 1px solid #F4CD0D;
+    border: 1px solid #FCE762;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
@@ -42,7 +42,7 @@
     font-weight: 300;
     font-size: 15px;
     line-height: 20px;
-    color: #080705;
+    color: #201335;
     & input {
       width: 100%;
     }
@@ -51,14 +51,14 @@
     margin: 10px auto;
     width: 100%;
     height: 40px;
-    background: #F4CD0D;
+    background: #FCE762;
     transition: 0.3s ease-out;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
     font-size: 12px;
     line-height: 22px;
-    color: #080705;
+    color: #201335;
     &:hover {
         transform: translateY(-5px);
     }
