--- a/src/styles/sliders.scss
+++ b/src/styles/sliders.scss
@@ -14,11 +14,11 @@
     }
   }
 }
-
 .slider__one {
+  position: relative;
   width: 100%;
   text-align: center;
-  overflow: hidden;
+  overflow-y: visible !important;
   @media (max-width: 850px) {
     display: flex;
     justify-content: space-between;
@@ -38,6 +38,7 @@
 }
 
 .slider_main__title {
+  position: relative;
   margin: 50px 0;
   font-family: Roboto Condensed;
   font-style: normal;
@@ -46,13 +47,47 @@
   line-height: 56px;
   color: #e6e6e6;
   text-transform: uppercase;
+  text-align: center;
   @media (max-width: 768px) {
     font-size: 50px;
   }
   @media (max-width: 550px) {
-    font-size: 32px;
+    font-size: 28px;
     margin: 20px 0;
     padding-bottom: 0;
+  }
+}
+
+@keyframes swipe {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-20px) rotate(-15deg);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slider__swipe {
+  display: none;
+  @media (max-width: 850px) {
+    display: block;
+    position: absolute;
+    bottom: -260px;
+    right: 100px;
+    width: 40px;
+    height: 40px;
+    background: url("../img/swipe.png") center/cover no-repeat;
+    z-index: 555;
+    animation: swipe 2s ease-in-out infinite;
+  }
+  @media (max-width: 550px) {
+    width: 40px;
+    height: 40px;
+    bottom: -220px;
+    right: 10px;
   }
 }
 
@@ -60,26 +95,25 @@
 .slider__two-card,
 .slider__three-card {
   height: 60px;
-  background: #f4cd0d;
+  background: #FCE762;
   transition: all 0.3s ease-in-out;
   display: flex;
   align-items: center;
   text-align: left;
   padding-left: 20px;
-  @media (max-width: 1000px) {
-    padding-left: 5px;
-  }
   @media (max-width: 850px) {
     text-align: center;
+    align-items: center;
     justify-content: center;
     margin: 0 5px;
     height: 150px;
+    padding-left: 0;
   }
-  
+
   &:hover {
     cursor: pointer;
     transform: translateX(10px);
-    @media (max-width: 768px) {
+    @media (max-width: 850px) {
       transform: none;
     }
   }
@@ -91,7 +125,7 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 35px;
-  color: #080705;
+  color: #201335;
   margin-left: 10px;
   @media (max-width: 1500px) {
     font-size: 15px;
