--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -27,6 +27,7 @@ body {
 @import "footer.scss";
 @import "blog.scss";
 @import "modal.scss";
+@import "singlepost.scss";
 
 .menu__button {
   position: absolute;
