--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -82,7 +82,7 @@
   }
 }
 
-.footer__menu-button p {
+.footer__menu-button div {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 600;
