--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -1,6 +1,7 @@
 * 
   padding: 0
-  margin: 0
+  margin-left: 0
+  margin-right: 0
   border: 0
   -moz-box-sizing: border-box
   -webkit-box-sizing: border-box
@@ -22,6 +23,7 @@ nav, footer, header, aside
   display: block
 
 html, body
+  margin: 0
   height: 100%
   width: 100%
   font-size: 100%
