--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 .title {
@@ -18,7 +19,6 @@
     font-size: 28px;
     margin: 20px 20px;
     line-height: 28px;
-    
   }
 }
 
@@ -46,10 +46,7 @@
 }
 
 .blog__img {
-  margin: 0 auto;
-  max-width: 97%;
-  height: 247px;
-  overflow: hidden;
+  width: 100%;
 }
 
 .blog__title {
@@ -61,6 +58,9 @@
   font-size: 28px;
   line-height: 42px;
   color: #201335;
+  @media (max-width: 860px) {
+    font-size: 23px;
+  }
 }
 
 .blog__category {
@@ -97,7 +97,11 @@
   right: 0;
   left: 0;
   height: 10em;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(255, 255, 255) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgb(255, 255, 255) 100%
+  );
   pointer-events: none;
 }
 
@@ -120,7 +124,7 @@
 .blog__arrow a:after {
   display: block;
   position: absolute;
-  left: 0; 
+  left: 0;
   bottom: -2px; /*изменить на right:0;, чтобы изменить направление подчёркивания */
   width: 0; /*задаём длинну линии до наведения курсора*/
   height: 1px; /*задаём ширину линии*/
@@ -166,10 +170,19 @@ a:focus:after {
   right: 0;
   left: 0;
   height: 10em;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 100%, rgb(255, 255, 255) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 100%,
+    rgb(255, 255, 255) 100%
+  );
   pointer-events: none;
 }
 
-
-
-
+.blog .swiper-button-next,
+.blog .swiper-button-prev {
+  top: 135px !important;
+  @media (max-width: 500px) {
+    display: none !important;
+  }
+  color: #201335 !important;
+}
