--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.blog .block__title {
   margin-bottom: 50px;
 }
 
