--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,20 +1,21 @@
 .about {
   position: relative;
-  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin: 50px auto 0;
   overflow: hidden;
-  @media (max-width: 768px) {
-    margin-top: 20px;
-  }
+  width: 80%;
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     z-index: 2;
     @media (max-width: 768px) {
       display: block;
     }
   }
   &__info {
-    width: 50%;
+    width: 100%;
     @media (max-width: 768px) {
       width: 100%;
     }
@@ -35,83 +36,6 @@
     font-size: 16px;
     line-height: 22px;
     color: #201335;
-    @media (max-width: 768px) {
-      margin-bottom: 20px;
-    }
-  }
-  &__square {
-    position: absolute;
-    width: 35%;
-    height: 100%;
-    right: 0;
-    top: 0;
-    background: #FCE762;
-    @media (max-width: 768px) {
-      z-index: -1;
-      left: 0;
-      width: 100%;
-      top: 30px;
-    }
   }
 }
 
-.square__content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.square__img {
-  position: absolute;
-  width: 232px;
-  height: 240px;
-  background: url(../img/pen.png) center/cover no-repeat;
-  bottom: 0;
-  left: -70px;
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
-
-.square__button {
-  position: absolute;
-  height: 50.79px;
-  right: -20px;
-  background: #2d2927;
-  border-radius: 0px;
-  display: flex;
-  align-items: center;
-  padding-left: 14px;
-  transition: all 0.3s ease-out;
-  &:hover {
-    right: 0;
-    cursor: pointer;
-  }
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
-
-.square__button p {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 22px;
-  color: #ffffff;
-}
-
-.square__button-l {
-  top: 150px;
-  width: 297px;
-}
-
-.square__button-m {
-  top: 214px;
-  width: 255px;
-}
-
-.square__button-s {
-  top: 278px;
-  width: 208px;
-}
