--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -113,9 +113,12 @@
 }
 
 .header__navbar {
-  position: absolute;
-  top: 45px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  background: rgba(126, 126, 126, 0.8);
+  padding: 25px 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -123,7 +126,6 @@
 }
 
 .header__menu {
-  position: relative;
   width: 480px;
   transition: all 0.3s ease-out;
   @media (max-width: 1200px) {
@@ -133,8 +135,9 @@
     width: 100%;
     height: 280px;
     position: absolute;
+    right: 0;
     z-index: 2;
-    padding-top: 30px;
+    padding-top: 100px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
   }
@@ -152,7 +155,7 @@
   height: 40px;
   @media (max-width: 1024px) {
     flex-direction: column;
-    margin-top: 80px;
+    margin-top: 50px;
   }
 }
 
@@ -170,8 +173,11 @@
     font-size: 11px;
   }
   @media (max-width: 1024px) {
-    margin-bottom: 18px;
+    margin-bottom: 8px;
+    border-radius: 5px;
     font-size: 16px;
+    background: rgba(126, 126, 126, 0.8);
+    padding: 5px;
   }
 }
 
@@ -185,6 +191,9 @@
   background-color: #ffffff; /*задаём цвет линии*/
   content: "";
   transition: width 0.3s ease-out; /*задаём время анимации*/
+  @media (max-width: 1025px) {
+    display: none;
+  }
 }
 
 .menu__item:hover {
@@ -235,13 +244,13 @@
   line-height: 22px;
   /* identical to box height */
 
-  color: #201335;
+  color: #ffffff;
 }
 
 .header__email {
   margin-top: 3px;
   text-align: right;
-  color: #201335;
+  color: #ffffff;
 }
 
 .header__email a {
@@ -250,7 +259,7 @@
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
-  color: #201335 !important;
+  color: #ffffff !important;
   position: relative;
   text-decoration: none;
 }
@@ -262,7 +271,7 @@
   bottom: -2px; /*изменить на right:0;, чтобы изменить направление подчёркивания */
   width: 0; /*задаём длинну линии до наведения курсора*/
   height: 1px; /*задаём ширину линии*/
-  background-color: #201335; /*задаём цвет линии*/
+  background-color: #ffffff; /*задаём цвет линии*/
   content: "";
   transition: width 0.3s ease-out; /*задаём время анимации*/
 }
@@ -270,20 +279,6 @@
 a:hover:after,
 a:focus:after {
   width: 100%; /*устанавливаем значение 100% чтобы ссылка подчёркивалась полностью*/
-}
-
-.contact__label {
-  position: absolute;
-  width: 198px;
-  height: 130px;
-  right: -16px;
-  top: -65px;
-  z-index: -1;
-  background: #fce762;
-  transition: 0.3s;
-  @media (max-width: 768px) {
-    display: none;
-  }
 }
 
 .social__links {
@@ -371,13 +366,18 @@ a:focus:after {
 
 .drop__menu {
   position: absolute;
-  width: 100%;
+  width: 480px;
   padding: 20px;
   background-color: #ffffff;
+  border: 1px solid #201335;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   transition: all 0.3s ease-in-out;
+  @media (max-width: 1200px) {
+    width: 350px;
+  }
   @media (max-width: 1025px) {
+    width: 100%;
     margin-top: -10px;
   }
 }
