--- a/src/styles/sliders.scss
+++ b/src/styles/sliders.scss
@@ -124,9 +124,9 @@
 .slider__title {
   font-family: Roboto Condensed;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 35px;
+  line-height: 25px;
   color: #201335;
   margin-left: 10px;
   @media (max-width: 1500px) {
